solve problem of jumping input tabs

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,12 @@ input:hover {
 }
 input:active {
 	background-color: white;
-	border: 1px solid #2F3837;
+	/*border: 1px solid #2F3837;*/
 	box-shadow: none;
 	outline: none;
 }
 input:focus{
-	border: 1px solid #2F3837;
+	/*border: 1px solid #2F3837;*/
 	outline: none;
 }
 table{
@@ -59,4 +59,7 @@ table{
 .col {
 	padding: 0;
 	margin: 0;
+}
+.table .table {
+    background-color: #FFF8D3;
 }
